--- a/Zone/app/src/main/res/layout/fragments_zone.xml
+++ b/Zone/app/src/main/res/layout/fragments_zone.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:textColor="#2A3B40"
     tools:context="com.example.vincentogbe.zone.Zone" >
 
     <TextView
